src/test/ui/const_prop/inline_spans.stderr
error: this arithmetic operation will overflow
  --> $DIR/inline_spans.rs:12:5
   |
LL |     x + y
   |     ^^^^^ attempt to compute `u8::MAX + 1_u8` which would overflow
   |
   = note: `#[deny(arithmetic_overflow)]` on by default

error: aborting due to previous error

